inference/k8s/20-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ml-inference
  namespace: inference
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ml-inference
  template:
    metadata:
      labels:
        app: ml-inference
    spec:
      serviceAccountName: inference-service-account
      containers:
        - name: api
          image: YOUR_ECR_OR_DOCKERHUB_IMAGE:TAG
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 10
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
